Thu Nov 13 09:27:33 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* test.make: Renamed to test-library.make.

Wed Nov 12 19:12:20 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* bundle.make: Changed to work with the new rules.make rules.
	* library.make: Make the install target depend on all.
	* test.make: Reworked for the new rules.make.
	* rules.make: Removed the definitions needed by test.make.

Wed Nov 12 13:29:24 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* common.make (OBJCFLAGS): Removed the -Wno-implicit flag since it
	could hide some programming errors.

Tue Nov 11 14:43:56 1997  Adam Fedor  <fedor@doc.com>

	* target.make (Solaris/BUNDLE_LDFLAGS): Change the flags.

Fri Nov  7 16:33:22 1997  Ovidiu Predescu <ovidiu@net-community.com>

	Reworked a bunch of files to be more general and faster.
	* clean.make: File removed.
	* GNUmakefile.in: Removed the clean.make.
	* rules.make: Reworked to be simpler and faster.
	* library.make: Reworked for the new rules.make.
	* names.make: Likewise.
	* objc.make: Likewise.
	* tool.make: Likewise.
	* application.make: Likewise. Wrote the install target support.

	* config.make.in: New definition for TAR.
	* test.make (testbundle-resource-files): Added __done at the end of the
	for list command so the shell doesn't crash if the list is empty.
	* brain.make: Small changes on the OPENSTEP support.
	* target.make: Added LIBRARIES_DEPEND_UPON to the list of libraries
	for OPENSTEP.

Sat Nov  1 13:17:07 1997  Scott Christley  <scottc@net-community.com>

	* brain.make: Export LIBRARY_COMBO.
	* common.make: Target and GUI header include flags should
	contain user, local, and system roots.  Rename GNUSTEP_TARGET_HEADERS
	to GNUSTEP_HEADERS_TARGET_FLAG.
	* rules.make: Rename GNUSTEP_TARGET_HEADERS to
	GNUSTEP_HEADERS_TARGET_FLAG.  Add AUXILIARY macros for auxiliary
	libraries to add flags (e.g. gnustep-db).
	* test.make: Put additional_library_paths outside of for loop.
