@@ -24,11 +24,12 @@
 # Set the GNUstep system root and local root
 #
 GNUSTEP_SYSTEM_ROOT=@prefix@
-GNUSTEP_LOCAL_ROOT=@prefix@/Local
 LIBRARY_COMBO=@ac_cv_library_combo@
+export GNUSTEP_SYSTEM_ROOT LIBRARY_COMBO
 
-GNUSTEP_USER_ROOT=~
-export GNUSTEP_SYSTEM_ROOT GNUSTEP_LOCAL_ROOT GNUSTEP_USER_ROOT LIBRARY_COMBO
+GNUSTEP_LOCAL_ROOT=@prefix@/Local
+GNUSTEP_USER_ROOT=~/GNUstep
+export GNUSTEP_LOCAL_ROOT GNUSTEP_USER_ROOT
 
 #
 # Determine the host information
@@ -50,8 +51,11 @@ export GNUSTEP_HOST GNUSTEP_HOST_CPU GNUSTEP_HOST_VENDOR GNUSTEP_HOST_OS
 #
 PATH=$GNUSTEP_SYSTEM_ROOT/Tools:$PATH
 PATH=$GNUSTEP_SYSTEM_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO:$PATH
+PATH=$GNUSTEP_SYSTEM_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS:$PATH
 PATH=$GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO:$PATH
+PATH=$GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS:$PATH
 PATH=$GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO:$PATH
+PATH=$GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS:$PATH
 
 . $GNUSTEP_SYSTEM_ROOT/Makefiles/ld_lib_path.sh
 
